# cpp-socket-programming

./: .gitignore  README.md
chat-server/: Client.cpp  README.md  Server.cpp
connection-pool/: CMakeLists.txt  README.md
connection-pool/include/: unittest.h
connection-pool/include/connection-pool/: connection.h  pool.h
connection-pool/src/: connection.cpp  main.cpp  pool.cpp  proxy.cpp  proxy.h
connection-pool/src/impl/: TcpConnection.h
connection-pool/src/socket/: CClientSocket.cpp  CClientSocket.h  CServerSocket.cpp  CServerSocket.h  ProtocolHelper.h  Socket.cpp  Socket.h  SocketSelect.cpp  SocketSelect.h
connection-pool/test/: TestConnection.h  test_basic.h  tests.cpp  tests.h
file-upload/: main.cpp
libuv-based/: Dockerfile  README.md  Server.cpp  docker-compose.yaml
multiple-client-single-thread/: Client.cpp  Server.cpp  Server_poll.cpp  Server_select.cpp
passthrough-proxy/: Dockerfile  Proxy.cpp  README.md  Socket.cpp  Socket.h  docker-compose.yaml
protocol-client/: Makefile  README.md
protocol-client/src/: main.cpp
protocol-client/src/engine/: constants.h
protocol-client/src/payload/: Payload.h
protocol-client/src/utils/: ProtocolHelper.cpp
protocol-server/: Makefile  README.md
protocol-server/src/: main.cpp
protocol-server/src/handler/: DefaultProtocolHandler.cpp  DefaultProtocolHandler.h  SchedulerHandler.cpp  SchedulerHandler.h  SyncApiProtocolHandler.cpp  SyncApiProtocolHandler.h
single-client-turn-based/: Client.cpp  Server.cpp
ssl-client/: Client.cpp
ssl-proxy/: CMakeLists.txt  Proxy.cpp
(+55 files in other folders)
